--- a/ereuse_devicehub/templates/inventory/unbinding.html
+++ b/ereuse_devicehub/templates/inventory/unbinding.html
@@ -26,84 +26,79 @@
                       <thead>
                           <tr class="text-center">
                               <th scope="col">Basic Data</th>
-                              <th scope="col">Info to be Entered</th>
-                              <th scope="col">Info to be Decoupled</th>
+                              <th scope="col">Info Abstract device</th>
+                              <th scope="col">Info Real device</th>
                           </tr>
                       </thead>
                       <tbody>
                           <tr>
-                              <th scope="row">PHID:</th>
-                              <td class="table-success"></td>
-                              <td class="table-danger text-right">{{ placeholder.phid or '' }}</td>
-                          </tr>
-                          <tr>
                               <th scope="row">Manufacturer:</th>
-                              <td class="table-success">{{ device.manufacturer or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.manufacturer or '' }}</td>
                               <td class="table-danger text-right">{{ placeholder.device.manufacturer or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Model:</th>
-                              <td class="table-success">{{ device.model or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.model or '' }}</td>
                               <td class="table-danger">{{ placeholder.device.model or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Serial Number:</th>
-                              <td class="table-success">{{ device.serial_number or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.serial_number or '' }}</td>
                               <td class="table-danger">{{ placeholder.device.serial_number or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Brand:</th>
-                              <td class="table-success">{{ device.brand or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.brand or '' }}</td>
                               <td class="table-danger">{{ placeholder.device.brand or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Sku:</th>
-                              <td class="table-success">{{ device.sku or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.sku or '' }}</td>
                               <td class="table-danger">{{ placeholder.device.sku or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Generation:</th>
-                              <td class="table-success">{{ device.generation or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.generation or '' }}</td>
                               <td class="table-danger">{{ placeholder.device.generation or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Version:</th>
-                              <td class="table-success">{{ device.version or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.version or '' }}</td>
                               <td class="table-danger">{{ placeholder.device.version or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Weight:</th>
-                              <td class="table-success">{{ device.weight or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.weight or '' }}</td>
                               <td class="table-danger">{{ placeholder.device.weight or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Width:</th>
-                              <td class="table-success">{{ device.width or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.width or '' }}</td>
                               <td class="table-danger">{{ placeholder.device.width or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Height:</th>
-                              <td class="table-success">{{ device.height or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.height or '' }}</td>
                               <td class="table-danger">{{ placeholder.device.height or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Depth:</th>
-                              <td class="table-success">{{ device.depth or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.depth or '' }}</td>
                               <td class="table-danger">{{ placeholder.device.depth or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Color:</th>
-                              <td class="table-success">{{ device.color or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.color or '' }}</td>
                               <td class="table-danger">{{ placeholder.device.color or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Production date:</th>
-                              <td class="table-success">{{ device.production_date or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.production_date or '' }}</td>
                               <td class="table-danger">{{ placeholder.device.production_date or '' }}</td>
                           </tr>
                           <tr>
                               <th scope="row">Variant:</th>
-                              <td class="table-success">{{ device.variant or '' }}</td>
+                              <td class="table-success">{{ placeholder.binding.variant or '' }}</td>
                               <td class="table-danger">{{ placeholder.device.variant or '' }}</td>
                           </tr>
                       </tbody>
@@ -111,26 +106,21 @@
 
                   <br />
 
-                  {% if placeholder.device.components or device.components %}
+                  {% if placeholder.components %}
                   <h2>Components</h2>
                   <table class="table table-hover">
                       <thead>
                           <tr class="text-center">
-                              <th scope="col">Info to be Entered</th>
-                              <th scope="col">Info to be Decoupled</th>
+                              <th scope="col">Info Abstract device</th>
+                              <th scope="col">Info Real device</th>
                           </tr>
                       </thead>
                       <tbody>
                           <tr>
                               <td class="table-success">
-                                  {% for c in device.components %}
-                                  * {{ c.verbose_name }}<br />
-                                  {% endfor %}
                               </td>
                               <td class="table-danger text-right">
-                                  {% for c in placeholder.device.components %}
-                                  * {{ c.verbose_name }}<br />
-                                  {% endfor %}
+                                  {{ placeholder.components  or ''}}
                               </td>
                           </tr>
                       </tbody>
@@ -139,24 +129,47 @@
 
                   <br />
 
-                  {% if placeholder.device.manual_actions or device.manual_actions %}
+                  {% if placeholder.device.manual_actions or placeholder.binding.manual_actions %}
                   <h2>Actions</h2>
                   <table class="table table-hover">
                       <thead>
                           <tr class="text-center">
-                              <th scope="col">Info to be Entered</th>
-                              <th scope="col">Info to be Decoupled</th>
+                              <th scope="col">Info Abstract device</th>
+                              <th scope="col">Info Real device</th>
                           </tr>
                       </thead>
                       <tbody>
                           <tr>
                               <td class="table-success">
-                                  {% for a in device.manual_actions %}
+                                  {% for a in placeholder.binding.manual_actions %}
                                   * {{ a.t }}<br />
                                   {% endfor %}
                               </td>
                               <td class="table-danger text-right">
                                   {% for a in placeholder.device.manual_actions %}
+                                  * {{ a.t }}<br />
+                                  {% endfor %}
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+                  {% endif %}
+
+                  {% if placeholder.device.tags %}
+                  <h2>Tags</h2>
+                  <table class="table table-hover">
+                      <thead>
+                          <tr class="text-center">
+                              <th scope="col">Info Abstract device</th>
+                              <th scope="col">Info Real device</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr>
+                              <td class="table-success">
+                              </td>
+                              <td class="table-danger text-right">
+                                  {% for a in placeholder.device.tags %}
                                   * {{ a.t }}<br />
                                   {% endfor %}
                               </td>
