to do binding from real device

--- a/ereuse_devicehub/templates/inventory/binding.html
+++ b/ereuse_devicehub/templates/inventory/binding.html
@@ -184,7 +184,7 @@
 
                   <div>
                     <form method="post">
-                      <a href="{{ url_for('inventory.device_details', id=old_placeholder.device.devicehub_id) }}" class="btn btn-danger">Cancel</a>
+                      <a href="{{ url_for('inventory.device_details', id=dhid) }}" class="btn btn-danger">Cancel</a>
                       <button class="btn btn-primary" type="submit">Confirm</button>
                     </form>
                   </div>
