change text help of wb settings template

--- a/ereuse_devicehub/templates/workbench/settings.html
+++ b/ereuse_devicehub/templates/workbench/settings.html
@@ -85,7 +85,7 @@
               </div>
               <div class="col">
                 <p class="small">
-                  Settings for basic erease | <a href="https://help.usody.com/es/setup/setup-pendrive/" target="_blank" class="help">Help</a>
+                  Settings for basic data erasure. | <a href="https://help.usody.com/es/setup/setup-pendrive/" target="_blank" class="help">Help</a>
                 </p>
               </div>
             </div>
@@ -95,7 +95,7 @@
               </div>
               <div class="col">
                 <p class="small">
-                  Settings for erease by sectors | <a href="https://help.usody.com/es/setup/setup-pendrive/" target="_blank" class="help">Help</a>
+                  Settings for advanced data erasure through sectors and hidden areas. Guarantee of data removal. | <a href="https://help.usody.com/es/setup/setup-pendrive/" target="_blank" class="help">Help</a>
                 </p>
               </div>
             </div>
@@ -106,7 +106,7 @@
               </div>
               <div class="col">
                 <p class="small">
-                  Settings for register devices
+                  Settings for register devices.
                 </p>
               </div>
             </div>
