change USOdy by Usody in base templates

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -95,7 +95,7 @@
           <li>
             <a class="dropdown-item d-flex align-items-center" href="{{ url_for('workbench.settings') }}">
               <i class="bi bi-tools"></i>
-              <span>Workbench</span>
+              <span>Setup</span>
             </a>
           </li>
           <li>
@@ -283,7 +283,7 @@
 <!-- ======= Footer ======= -->
 <footer id="footer" class="footer">
   <div class="copyright">
-    &copy; Copyright <strong><span>USOdy</span></strong>. All Rights Reserved
+    &copy; Copyright <strong><span>Usody</span></strong>. All Rights Reserved
   </div>
   <div class="credits">
     <!-- All the links in the footer should remain intact. -->
